[package]
name = "cargo-self-version"
version = "0.1.1"
edition = "2021"
authors = ["Ramon Moraes <ramonmoraes.foss@gmail.com>"]
description = "retrieves current version from a Cargo.toml."
license = "MIT"
documentation = "https://docs.rs/cargo-self-version/latest/cargo-self-version/"
homepage = "https://github.com/rmoraes92/cargo-self-version"

[[bin]]
name = "cargo-self-version"

[dependencies]
cfo = "0.1.0"
clap = { version = "4.5.31", features = ["derive"] }
toml = "0.8.20"
